--- a/src/components/Clipboard/_Clipboard.scss
+++ b/src/components/Clipboard/_Clipboard.scss
@@ -12,9 +12,8 @@ $base-class: clipboard;
   z-index: 1001;
   width: 250px;
   background-color: whitesmoke;
-  position: fixed;
+  position: relative;
   top: 2rem;
-  left: calc(100vw - 27rem);
 
   &__header {
     @include modal-section('header');
