--- a/src/components/Dictionary/_Dictionary.scss
+++ b/src/components/Dictionary/_Dictionary.scss
@@ -13,9 +13,8 @@ $base-class: dictionary;
   width: 250px;
   min-height: 300px;
   background-color: whitesmoke;
-  position: fixed;
+  position: relative;
   top: 2rem;
-  left: calc(100vw - 27rem);
 
   &__header {
     @include modal-section('header');
